force-app/main/default/objects/Related_Businesses__c/Related_Businesses__c.object-meta.xml
<CustomObject>
    <label>Related Business</label>
    <nameField>
        <displayFormat>RBO-{00000000}</displayFormat>
        <label>Related Businesses Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Businesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>