force-app/main/default/objects/Related_Businesses__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Used to track the additional notes related to the Related business</description>
    <label>Additional Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>