force-app/main/default/objects/Related_Businesses__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Used to store business Account for the Rbo record</description>
    <label>Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Businesses (Business)</relationshipLabel>
    <relationshipName>Related_Businessess</relationshipName>
    <type>Lookup</type>
</CustomField>