force-app/main/default/objects/Related_Businesses__c/fields/Case_Management_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Management_Id__c</fullName>
    <label>Case Management Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>