force-app/main/default/objects/Related_Businesses__c/fields/Date_Notice_Sent_to_Related_Business__c.field-meta.xml
<CustomField>
    <fullName>Date_Notice_Sent_to_Related_Business__c</fullName>
    <label>Date Notice Sent to Related Business</label>
    <type>Date</type>
</CustomField>