force-app/main/default/objects/Related_Businesses__c/fields/Related_Business__c.field-meta.xml
<CustomField>
    <fullName>Related_Business__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Businesses (Related Business)</relationshipLabel>
    <relationshipName>Related_Businessess1</relationshipName>
    <type>Lookup</type>
</CustomField>