force-app/main/default/objects/Related_Businesses__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alter Ego</fullName>
            </value>
            <value>
                <fullName>LC 238 (Related Business)</fullName>
            </value>
            <value>
                <fullName>Parent Company</fullName>
            </value>
            <value>
                <fullName>Predecessor</fullName>
            </value>
            <value>
                <fullName>Single Enterprise</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
            <value>
                <fullName>Successor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>