force-app/main/default/objects/Related_Businesses__c/recordTypes/Business.recordType-meta.xml
<RecordType>
    <fullName>Business</fullName>
    <active>true</active>
    <description>Used for the read only access for business, Related Business and Related Business Name.</description>
    <label>Business</label>
</RecordType>